[package]
name = "relic-client"
version = "0.1.0"
description = ""
authors = ["Andreas Krühlmann"]
edition = "2021"

[[bin]]
name = "relic-client"
path = "src/rust/main.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
